--- a/app/src/main/res/layout/item_attendee.xml
+++ b/app/src/main/res/layout/item_attendee.xml
@@ -7,8 +7,7 @@
     android:backgroundTint="@color/light_2"
     android:layout_width="match_parent"
     android:layout_height="46dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp">
+    android:layout_marginBottom="5dp">
 
     <ImageView
         android:id="@+id/initialsCircleImageView"
@@ -35,7 +34,7 @@
     </TextView>
 
     <TextView
-        android:id="@+id/attendeeFullNameTextViw"
+        android:id="@+id/attendeeFullNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
