-Added add attendee dialog -Added KTLINT plugin -Updated miniCalendar on agenda screen to use a recyclerView -Updated edit screen to look more like mockup -Updated agenda screen to look more like mockup -Added save state handle to event fragment -Put code into fragment_reminder_detail.xml and fragment_task_detail.xml -Added unit test for StringToInitials.kt (StringToInitialsTest.kt) -AGENDA NAVIGATIONS FROM AGENDA SCREEN DO NOT WORK CORRECTLY AS I AM STILL MIGRATING FROM ONE AGENDA DETAIL SCREEN TO THREE SEPARATE ONES

--- a/app/src/main/res/layout/fragment_agenda_item_detail.xml
+++ b/app/src/main/res/layout/fragment_agenda_item_detail.xml
@@ -241,7 +241,7 @@
                         android:id="@+id/addPhotoPlusSign"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_add_photo_plus_sign"
+                        android:src="@drawable/ic_add_sign"
                         android:layout_marginTop="47dp"
                         android:layout_marginBottom="47dp"
                         app:layout_constraintEnd_toStartOf="@id/addPhotoTextView"
@@ -363,7 +363,7 @@
                         android:id="@+id/allButton"
                         android:layout_width="100dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/rounded_button"
+                        android:background="@drawable/bg_rounded_button"
                         android:backgroundTint="@color/black"
                         android:layout_marginTop="37dp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -390,7 +390,7 @@
                         android:id="@+id/goingButton"
                         android:layout_width="100dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/rounded_button"
+                        android:background="@drawable/bg_rounded_button"
                         android:backgroundTint="@color/black"
                         android:layout_marginTop="37dp"
                         app:layout_constraintStart_toEndOf="@id/allButton"
@@ -416,7 +416,7 @@
                         android:id="@+id/notGoingButton"
                         android:layout_width="100dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/rounded_button"
+                        android:background="@drawable/bg_rounded_button"
                         android:backgroundTint="@color/black"
                         android:layout_marginTop="37dp"
                         app:layout_constraintStart_toEndOf="@id/goingButton"
