--- a/app/src/main/res/layout/dialog_delete_confirmation.xml
+++ b/app/src/main/res/layout/dialog_delete_confirmation.xml
@@ -1,77 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Linear layout solved the issue of view binding pushing all the views together -->
-<androidx.appcompat.widget.LinearLayoutCompat
+<androidx.cardview.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="200dp">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:elevation="40dp"
-        android:background="@drawable/rounded_button">
-        <TextView
-            android:id="@+id/deleteTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="20dp"
-            android:paddingTop="20dp"
-            android:text="@string/delete"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </TextView>
-        <View
-            android:id="@+id/topOfConfirmationLine"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="24dp"
-            android:background="@color/light_2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/deleteTextView" />
-        <TextView
-            android:id="@+id/confirmationTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textColor="@color/black"
-            android:paddingStart="20dp"
-            android:text="Are you sure you want to delete this reminder?"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/topOfConfirmationLine">
-        </TextView>
-        <View
-            android:id="@+id/topOfButtonsLine"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/light_2"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/confirmationTextView"
-            app:layout_constraintStart_toStartOf="parent"/>
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/light_2"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintEnd_toStartOf="@id/deleteButton"
-            app:layout_constraintBottom_toBottomOf="parent">
-        </Button>
-        <Button
-            android:id="@+id/deleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete"
-            android:backgroundTint="@color/red"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-        </Button>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.appcompat.widget.LinearLayoutCompat>
+    android:layout_width="342dp"
+    android:layout_height="220dp"
+    app:cardCornerRadius="30dp">
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="342dp"
+        android:layout_height="220dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="342dp"
+            android:layout_height="220dp">
+            <TextView
+                android:id="@+id/deleteTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:paddingTop="20dp"
+                android:text="@string/delete"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+            </TextView>
+            <View
+                android:id="@+id/topOfConfirmationLine"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="24dp"
+                android:background="@color/light_2"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/deleteTextView"
+                app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                android:id="@+id/confirmationTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/black"
+                android:paddingStart="20dp"
+                android:text="Are you sure you want to delete this reminder?"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/topOfConfirmationLine">
+            </TextView>
+            <View
+                android:id="@+id/topOfButtonsLine"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/light_2"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toBottomOf="@id/confirmationTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+            <Button
+                android:id="@+id/cancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:textColor="@color/black"
+                android:backgroundTint="@color/light_2"
+                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintEnd_toStartOf="@id/deleteButton"
+                app:layout_constraintBottom_toBottomOf="parent">
+            </Button>
+            <Button
+                android:id="@+id/deleteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:backgroundTint="@color/red"
+                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+            </Button>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.cardview.widget.CardView>
+
