--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,16 +11,16 @@
     <TextView
         android:id="@+id/calendarMonth"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="MARCH"
         android:gravity="center"
         android:textColor="@color/white"
-        android:layout_marginStart="30dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
+        android:fontFamily="@font/inter_bold"
+        android:textSize="16sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/mainBodyLayout">
+        app:layout_constraintStart_toStartOf="parent">
     </TextView>
     <ImageView
         android:id="@+id/calendarDropDownArrow"
@@ -35,13 +36,13 @@
         android:id="@+id/logoutButtonLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/mainBodyLayout">
+        app:layout_constraintEnd_toEndOf="parent">
     <ImageView
         android:id="@+id/logoutButton"
-        android:background="@drawable/logout_circle"
+        android:background="@drawable/ic_logout_initials_circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,10 +54,10 @@
             android:id="@+id/logoutButtonText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#b7c7de"
+            android:textColor="@color/light_blue"
             android:text="AH"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:textSize="16sp"
+            android:fontFamily="@font/inter_semi_bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -75,89 +76,79 @@
         android:id="@+id/mainBodyLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="53dp"
         android:background="@drawable/bg_rounded_top"
         android:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="-16dp">
 
         <LinearLayout
-            android:id="@+id/miniCalendar"
+            android:id="@+id/miniCalendarLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:padding="16dp"
+            android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
 
-            <com.andrew.tasky.presentation.views.MiniCalendarItem
-                android:id="@+id/today"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </com.andrew.tasky.presentation.views.MiniCalendarItem>
-            <com.andrew.tasky.presentation.views.MiniCalendarItem
-                android:id="@+id/tomorrow"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/miniCalendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp">
-            </com.andrew.tasky.presentation.views.MiniCalendarItem>
-            <com.andrew.tasky.presentation.views.MiniCalendarItem
-                android:id="@+id/thirdDay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp">
-            </com.andrew.tasky.presentation.views.MiniCalendarItem>
-            <com.andrew.tasky.presentation.views.MiniCalendarItem
-                android:id="@+id/fourthDay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp">
-            </com.andrew.tasky.presentation.views.MiniCalendarItem>
-            <com.andrew.tasky.presentation.views.MiniCalendarItem
-                android:id="@+id/fifthDay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp">
-            </com.andrew.tasky.presentation.views.MiniCalendarItem>
-            <com.andrew.tasky.presentation.views.MiniCalendarItem
-                android:id="@+id/sixthDay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp">
-            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="23dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="23dp">
 
+            </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
 
         <TextView
             android:id="@+id/current_date_selected_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="34dp"
+            android:fontFamily="@font/inter_bold"
             android:text="Today"
-            android:textStyle="bold"
             android:textColor="@color/black"
-            android:textSize="25sp"
-            android:layout_marginStart="30dp"
-            app:layout_constraintTop_toBottomOf="@id/miniCalendar"
-            app:layout_constraintStart_toStartOf="parent">
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/miniCalendarLinearLayout">
         </TextView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/agendaItemRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/current_date_selected_text_view">
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/agendaItemRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/current_date_selected_text_view"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="14dp">
+        </androidx.recyclerview.widget.RecyclerView>
 
-    <ImageButton
-        android:id="@+id/addAgendaItemFAB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/floating_action_button_new_agenda_item"
-        android:layout_marginBottom="50dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </ImageButton>
+        <ImageButton
+            android:id="@+id/addAgendaItemFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="33dp"
+            android:background="@drawable/ic_add_agenda_item_fab_bg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+        </ImageButton>
+
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:background="@drawable/ic_add_sign"
+            android:backgroundTint="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/addAgendaItemFAB"
+            app:layout_constraintEnd_toEndOf="@id/addAgendaItemFAB"
+            app:layout_constraintStart_toStartOf="@id/addAgendaItemFAB"
+            app:layout_constraintTop_toTopOf="@id/addAgendaItemFAB">
+        </ImageView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
