--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -207,7 +207,7 @@
             android:id="@+id/getStartedButton"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/bg_rounded_button"
             android:text="@string/get_started_button"
             app:layout_constraintTop_toBottomOf="@id/topOfGetStarted"
             app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
