--- a/app/src/main/res/layout/item_agenda.xml
+++ b/app/src/main/res/layout/item_agenda.xml
@@ -7,22 +7,25 @@
     android:layout_height="120dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
-    android:layout_marginTop="14dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp"
     app:cardBackgroundColor="#cced42"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="20dp"
     android:outlineSpotShadowColor="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp">
+        android:layout_height="match_parent">
 
         <ImageButton
             android:id="@+id/done_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@null"
             android:src="@drawable/task_done_circle"
+            android:padding="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         </ImageButton>
@@ -33,45 +36,53 @@
             android:layout_height="wrap_content"
             android:text="Project X"
             android:textColor="@color/black"
-            android:textSize="24sp"
-            android:paddingStart="10dp"
-            android:textStyle="bold"
+            android:textSize="20sp"
+            android:fontFamily="@font/inter_bold"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@id/done_button"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="@id/done_button"
+            app:layout_constraintBottom_toBottomOf="@id/done_button">
         </TextView>
+
         <TextView
             android:id="@+id/agenda_item_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/inter_regular"
             android:text="Amet minim non deserunt"
             android:textColor="@color/dark_gray"
-            android:paddingStart="10dp"
-            android:paddingTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/agenda_item_title"
-            app:layout_constraintStart_toStartOf="@id/agenda_item_title">
-        </TextView>
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@id/agenda_item_title"
+            app:layout_constraintTop_toBottomOf="@id/agenda_item_title"></TextView>
 
         <TextView
             android:id="@+id/options_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginEnd="8dp"
+            android:padding="10dp"
             android:text="..."
-            android:textColor="@color/black"
+            android:textColor="@color/brown"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/agenda_item_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         </TextView>
+
         <TextView
             android:id="@+id/agenda_item_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="14dp"
+            android:layout_marginBottom="12dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/inter_regular"
             android:text="Mar 5, 10:30 - Mar 5, 11:00"
             android:textColor="@color/dark_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
         </TextView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
