--- a/app/src/main/res/layout/item_mini_calendar_day.xml
+++ b/app/src/main/res/layout/item_mini_calendar_day.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="50dp"
-    android:layout_height="70dp">
+    android:id="@+id/miniCalendarCard"
+    android:outlineSpotShadowColor="@color/white"
+    android:layout_width="40dp"
+    android:layout_height="61dp"
+    android:layout_marginStart="7.5dp"
+    android:layout_marginEnd="7.5dp"
+    app:cardElevation="0dp"
+    app:cardBackgroundColor="#FFFFFF"
+    app:cardCornerRadius="100dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/miniCalendarCard"
-        android:outlineSpotShadowColor="@color/white"
-        app:cardElevation="0dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="24dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-    </androidx.cardview.widget.CardView>
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/dayOfWeek"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="S"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/dark_gray"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-    </TextView>
-    <TextView
-        android:id="@+id/dateNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="10"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/dark_gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-    </TextView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/dayOfWeek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12.35dp"
+            android:text="S"
+            android:textSize="11sp"
+            android:fontFamily="@font/inter_bold"
+            android:textColor="@color/dark_gray"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+        </TextView>
+        <TextView
+            android:id="@+id/dateNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="10"
+            android:textSize="17sp"
+            android:fontFamily="@font/inter_bold"
+            android:textColor="@color/dark_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+        </TextView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
