--- a/app/src/main/res/layout/item_photo_adapter_card.xml
+++ b/app/src/main/res/layout/item_photo_adapter_card.xml
@@ -17,7 +17,7 @@
         android:id="@+id/plusSign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add_photo_plus_sign"
+        android:src="@drawable/ic_add_sign"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
